
public class RegularUser extends User {
    public RegularUser() {
        super();
    }
}